(lang dune 3.6)

(name aoc)

(source
 (github arya-k/aoc))

(authors "Arya Kumar")

(maintainers "Arya Kumar")

(license LICENSE)

(documentation n/a)

(package
 (name aoc)
 (synopsis "Advent of Code 2022")
 (description "Advent of code problems for 2022, in Ocaml")
 (depends ocaml dune)
 (tags ()))
